# alg-search

./: 3.xml  4.xml  Algorithms.cpp  Algorithms.h  CMakeLists.txt  ColoredOut.h  Heuristics.h  MatrixGraph.cpp  MatrixGraph.h  README.md  Shell.h  Utils.h  input  main.cpp
include/: MatrixGraph.h  NodeData.h  Utils.h
res/: 2.xml  3.xml  4.xml  input.xml
src/: Algorithms.cpp  ColoredOut.cpp  Heuristics.cpp
